# monatise-live

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements-live.txt
app/: about.html  app.js  cg.html  coinglass-dashboard.css  coinglass-dashboard.html  coinglass-dashboard.js  contact.html  doctrine.html  game.html  game.js  gold.html  index.html  learn.html  manifest.webmanifest  memecoins.css  memecoins.html  memecoins.js  onboarding.html  planner.js  spotify.js  styles.css  sw.js
deploy/: apprunner-access-role.yaml  apprunner.yaml  aws-deploy.sh  aws-deployment-policy.json  aws-hosting.md  live-runbook.md  render-hosting.md  set-hyperliquid-secrets.sh
docs/: PRODUCTION_ARCHITECTURE.md
examples/: run_simulation.py  sample_prices.csv
monatise/: __init__.py  cli.py
monatise/live/: risk.py  (+9 more)
outputs/: live-trading-readiness.md  monatise-liquidity-harvesting-positioning.md  monatise-snapshot-signal-policy.md  monatise-software-architecture.md  monatise-word-of-god-doctrine-layer.md
scripts/: serve_live.py  verify_signal_safety.mjs
tests/: run_tests.py  test_backpack_adapter.py  test_billing.py  test_browser_javascript.py  test_coinglass_adapter.py  test_context.py  test_emailer.py  test_fibonacci.py  test_fvg.py  test_grid.py  test_harvester.py  test_hyperliquid_candles.py  test_live_config.py  test_live_secrets.py  test_live_server.py  test_live_service.py  test_live_users.py  test_memecoins.py  test_openclaw_crypto_skill.py  test_payments.py  test_quiver_adapter.py  test_sessions.py  test_simulation.py  test_site_auth.py  (+1 more)
(+52 files in other folders)
