[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "monatise"
version = "0.1.0"
description = "A local-first liquidity harvesting framework for grid-based trading strategies."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Monatise" }]
dependencies = ["cryptography>=42.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
live = ["hyperliquid-python-sdk==0.23.0"]

[project.scripts]
monatise = "monatise.cli:main"
monatise-live = "monatise.live.server:main"

[tool.setuptools.packages.find]
include = ["monatise*"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
testpaths = ["tests"]
